# StrictOrderSolver

./: LICENSE  README.md  Solver.v  Tests.v  dune  dune-project  strict-order-solver.opam
.github/workflows/: ci.yml
